<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ColorPrime"
    tools:context=".Activity.Password">


<!--    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner"
        tools:ignore="MissingClass" />-->

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:queryBackground="@android:color/transparent"
        android:queryBackground="@android:color/transparent"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_view"
        android:outlineProvider="none"
        android:id="@+id/SearchView"
        android:theme="@style/SearchViewStyle"
        android:queryHint="@string/Search_model"
        android:searchHintIcon="@drawable/ic_baseline_search_24"
        android:iconifiedByDefault="false"
        android:searchIcon="@drawable/ic_baseline_search_24"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#BEBEBF"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/brand"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/model"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/RoutersRecyclerview"
        android:orientation="vertical"
        android:fadeScrollbars= "true"
        android:scrollbarAlwaysDrawVerticalTrack = "false"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/thumb"
        android:scrollbarTrackVertical = "@drawable/scrollbar"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="8dp"
        />


</LinearLayout>