<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Device_Owner"
        android:id="@+id/device_owner"
        android:textColor="@color/ColorScound"
        android:paddingTop="8dp"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:layout_marginBottom="8dp"
                android:textColor="#9FFFFFFF"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/text_ip"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:text="test"
                />


        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:id="@+id/ip_copy"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/ColorPrime"
            tools:ignore="UnusedAttribute">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_content_copy_24"
            app:tint = "@color/white"
            />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mac"
                android:textColor="#9FFFFFFF"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/text_mac"
                android:layout_gravity="center_vertical"
                android:text="test"
                />


        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:id="@+id/mac_copy"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/ColorPrime"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_content_copy_24"
                app:tint = "@color/white"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:textColor="#9FFFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vendor"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/text_vendor"
                android:layout_gravity="center_vertical"
                android:text="test"
                />


        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:id="@+id/vendor_copy"
            app:cardCornerRadius="16dp"
            android:backgroundTint="@color/ColorPrime"
            tools:ignore="UnusedAttribute">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_content_copy_24"
                app:tint = "@color/white"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_gravity="center"
        android:id="@+id/layout_btn"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:elevation="0dp"
            android:text="@string/Cancel"
            app:backgroundTint="@color/ColorPrime"
            android:textColor="#fff"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:elevation="0dp"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:text="@string/Block"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:elevation="0dp"
            app:elevation="0dp"
            app:backgroundTint="@color/ColorScound"
            app:cornerRadius="24dp"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>
</LinearLayout>